--- a/twentyone/Cargo.toml
+++ b/twentyone/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
-name = "twentyone"
-version = "0.1.0"
+name = "twenty-one-dares"
+version = "1.0.0"
 edition = "2021"
+authors = ["Tanzilovic"]
+description = "A simple 21 dares game built with Rust."
+readme = "README.md"
+repository = "https://github.com/Tanzilovic/twentyone"
+license = "GPL-3.0-only"
+keywords = ["cli", "game"]
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
